Styled the homepage and added information on using the API

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>TimeStampAPI</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="wrap">
         <h1>Time Stamp API</h1>
-        <p>How to use it:</p>
-        <p>Example input:</p>
-        <p>Example output:</p>
+        <p id="p1">Purpose: You can use this API to find the unix time stamp from a natural language time format or find the natural language time format from a unix time stamp. <a target="_blank" href="https://en.wikipedia.org/wiki/Unix_time">Learn about the unix timestamp.</a> </p>
+        <p id="p2">Example input:
+        <br>
+        <br>
+        <code>https://cryptic-brushlands-28381.herokuapp.com/December 4 2015</code> <br>
+        <code>https://cryptic-brushlands-28381.herokuapp.com/1449187200</code>
+
+        </p>
+        <p id="p3">Example JSON output: <br><br>
+        <code>{"unix":1417651200,"natural":"December 4 2014"}</code>
+        </p>
+        <p>Example API call: <br><br><a target="_blank" href="https://cryptic-brushlands-28381.herokuapp.com/October 4 1974">
+            <code>https://cryptic-brushlands-28381.herokuapp.com/October 4 1974</code>
+        </a></p>
     </div>
 </body>
 </html>
